[package]
name = "extract-links-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
reqwest = "0.11.12"
select = "0.6.0"                                    #A library to extract useful data from HTML documents, suitable for web scraping.
tokio = { version = "1.21.1", features = ["full"] }
